fix(yalb-1319): dry create truncate-text mixin and include it. Fix unnamed function

--- a/components/00-tokens/typography/_typography.scss
+++ b/components/00-tokens/typography/_typography.scss
@@ -150,3 +150,13 @@ code {
 @mixin body-xs {
   font: var(--font-style-body-xs);
 }
+
+@mixin truncate-text($lines: 1) {
+  max-width: 100%;
+  text-overflow: ellipsis;
+  width: fit-content;
+  white-space: nowrap;
+  line-clamp: $lines;
+  -webkit-line-clamp: $lines;
+  overflow: hidden;
+}
